--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,9 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- SweetAlert2 CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- css responsive -->
     <link rel="stylesheet" href="../assets/css/mobile.css" />
   </head>
@@ -55,17 +58,33 @@
         <form class="form-control">
           <h3>Formulario con validaciones</h3>
           <p></p>
-
-          <h5 class="mb-1">Rut:</h5>
           <small
-            ><label for="txtFormRut" class="" style="color: red"
-              >Campo requerido...</label
+            ><label
+              id="labelCampoRequerido"
+              for="txtFormRut"
+              class="d-none mb-2"
+              style="color: red"
+              >Todos los campos son requeridos</label
             ></small
           >
+
+          <h5 class="mb-1">
+            Rut:
+            <small
+              ><label
+                id="labelRut"
+                for="txtFormRut"
+                class="d-none mb-2 d-none"
+                style="color: red"
+                >El RUT ingresado no es válido</label
+              ></small
+            >
+          </h5>
           <input
             required
             type="text"
             id="txtFormRut"
+            maxlength="12"
             class="input-group mb-3 m-sm-2"
           />
           <h5 class="mb-1">Nombre:</h5>
@@ -122,5 +141,7 @@
 
     <!-- script -->
     <script src="../assets/js/app.js"></script>
+    <script src="../assets/js/functions/formatInputRut.js"></script>
+    <script src="../assets/js/functions/validatorRut.js"></script>
   </body>
 </html>
