La validación del rut está listo, faltan las validaciones del resto de inputs del formulario, luego falta rrealizar la lógica del fetch y completar la lógica del modelo y controlador (Aún está pendiente si será con PHP la lógica del modelo y controlador).

--- a/views/index.html
+++ b/views/index.html
@@ -83,6 +83,7 @@
           <input
             required
             type="text"
+            value="-"
             id="txtFormRut"
             maxlength="12"
             class="input-group mb-3 m-sm-2"
