--- a/views/index.html
+++ b/views/index.html
@@ -93,6 +93,7 @@
             required
             type="text"
             id="txtFormNombre"
+            maxlength="100"
             class="input-group mb-3 m-sm-2"
           />
           <h5 class="mb-1">Edad:</h5>
@@ -101,6 +102,7 @@
             type="number"
             min="0"
             max="150"
+            maxlength="3"
             id="intFormEdad"
             class="input-group mb-3 m-sm-2"
           />
@@ -122,7 +124,7 @@
           <input
             type="submit"
             id="btnFormEnviar"
-            class="btn btn-primary mt-3 mb-2 col-5"
+            class="btn btn-primary mt-3 mb-2 col-5 d-none"
             value="ENVIAR"
           />
         </form>
@@ -144,5 +146,8 @@
     <script src="../assets/js/app.js"></script>
     <script src="../assets/js/functions/formatInputRut.js"></script>
     <script src="../assets/js/functions/validatorRut.js"></script>
+    <script src="../assets/js/functions/formatInputNombre.js"></script>
+    <script src="../assets/js/functions/fromatInputEdad.js"></script>
+    <script src="../assets/js/functions/formatInputEmail.js"></script>
   </body>
 </html>
