Ya funciona, es viable para git hub pages - v0.1

--- a/views/index.html
+++ b/views/index.html
@@ -83,7 +83,7 @@
           <input
             required
             type="text"
-            value="-"
+            value=""
             id="txtFormRut"
             maxlength="12"
             class="input-group mb-3 m-sm-2"
@@ -145,7 +145,6 @@
     <!-- script -->
     <script src="../assets/js/app.js"></script>
     <script src="../assets/js/functions/formatInputRut.js"></script>
-    <script src="../assets/js/functions/validatorRut.js"></script>
     <script src="../assets/js/functions/formatInputNombre.js"></script>
     <script src="../assets/js/functions/fromatInputEdad.js"></script>
     <script src="../assets/js/functions/formatInputEmail.js"></script>
